force-app/main/default/objects/BVC_Vault_Master__c/BVC_Vault_Master__c.object-meta.xml
<CustomObject>
    <label>Vault</label>
    <nameField>
        <label>BVC Vault Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vaults</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>