force-app/main/default/objects/BVC_Vault_Master__c/fields/BVC_Hub__c.field-meta.xml
<CustomField>
    <fullName>BVC_Hub__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Hub</description>
    <label>BVC Hub</label>
    <referenceTo>Hub__c</referenceTo>
    <relationshipName>BVC_Vault_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>