force-app/main/default/objects/BVC_Vault_Master__c/fields/BVC_Vault_Number__c.field-meta.xml
<CustomField>
    <fullName>BVC_Vault_Number__c</fullName>
    <label>BVC Vault Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>