force-app/main/default/objects/BVC_Vault_Master__c/fields/BVC_Vault_Type__c.field-meta.xml
<CustomField>
    <fullName>BVC_Vault_Type__c</fullName>
    <label>BVC Vault Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>DEFENDER</fullName>
            </value>
            <value>
                <fullName>VAULT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>