force-app/main/default/objects/BVC_Vault_Master__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment</label>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipLabel>Vaults</relationshipLabel>
    <relationshipName>Vaults</relationshipName>
    <type>Lookup</type>
</CustomField>