force-app/main/default/objects/BVC_Vault_Master__c/fields/Vault_Branch__c.field-meta.xml
<CustomField>
    <fullName>Vault_Branch__c</fullName>
    <label>Vault Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Branch</valueSetName>
    </valueSet>
</CustomField>